# xswag-syntax-java

./: .gitignore  Cargo.toml  README.md
examples/: HelloWorld.java  PlayExample.java  hello-world-lex.rs  play.rs
src/: lex.rs  lib.rs
src/ast/: block.rs  item.rs  mod.rs
src/grammar/: .gitignore  java8.lalrpop  main.lalrpop  mod.rs
src/lex/: mod.rs  test.rs  token.rs  tokenizer.rs
tools/: Cargo.toml
tools/src/: token-dump.rs
