[package]
name = "xswag-syntax-java"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
build = "build.rs"

[dependencies.xswag-base]
git = "https://github.com/LukasKalbertodt/xswag-base"
branch = "master"

[build-dependencies]
lalrpop = "0.10.0"

[dependencies]
lalrpop-util = "0.10.0"
