[package]
name = "xswag-syntax-java"
version = "0.2.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
build = "build.rs"

description = "Java Parser for the xswag system"
repository = "https://github.com/LukasKalbertodt/xswag-syntax-java"
license = "MIT"

[dependencies.xswag-base]
git = "https://github.com/LukasKalbertodt/xswag-base"
branch = "master"

[build-dependencies]
lalrpop = "0.11.0"

[dependencies]
lalrpop-util = "0.11.0"
# xswag-base = "0.2"

[dev-dependencies]
env_logger = "0.3"
